# GLshader

./: CMakeLists.txt  CMakeSettings.json  README.md  Shader.h  main.cpp  test_fragment_shader.txt  test_vertex_shader.txt
src/: shader_load_src.cpp  shader_other_src.cpp  shader_uniform_src.cpp
